server/compilers/goLiteJS/src/test/ml2/valid/valreturn1.go
package main
//Return on a for true statement

func main() bool {
    var a bool = true;
    for {
        return true
    }
}
