server/compilers/goLiteJS/src/test/ml2/invalid/mau_shortdecl2.go
// no new variables on left side of :=
package main

func main(b int) {
  b := 3
}
